chore: trying to fix h1 p blur

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,5 @@
 ---
 import Card from '../components/Card.astro';
-import Cursor from '../components/Cursor.astro';
-import NavBar from '../components/NavBar.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
@@ -25,7 +23,24 @@ import Layout from '../layouts/Layout.astro';
 			<Card title="Project 1" description="Description of project 1" />
 			<Card title="Project 2" description="Description of project 2" />
 			<Card title="Project 3" description="Description of project 3" />
-			
+		</div>
+		<p>SARASA</p>
+		<div class="cards">
+			<Card title="Project 1" description="Description of project 1" />
+			<Card title="Project 2" description="Description of project 2" />
+			<Card title="Project 3" description="Description of project 3" />
+			<Card title="Project 1" description="Description of project 1" />
+			<Card title="Project 2" description="Description of project 2" />
+			<Card title="Project 3" description="Description of project 3" />
+			<Card title="Project 1" description="Description of project 1" />
+			<Card title="Project 2" description="Description of project 2" />
+			<Card title="Project 3" description="Description of project 3" />
+			<Card title="Project 1" description="Description of project 1" />
+			<Card title="Project 2" description="Description of project 2" />
+			<Card title="Project 3" description="Description of project 3" />
+			<Card title="Project 1" description="Description of project 1" />
+			<Card title="Project 2" description="Description of project 2" />
+			<Card title="Project 3" description="Description of project 3" />
 		</div>
 	</section>
 </Layout>
