--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -1,5 +1,6 @@
 ---
 import { Icon } from 'astro-icon/components'
+import { ThemeToggle } from './react/ThemeToggle.tsx'
 ---
 
 <nav class="backdrop-saturate-100 backdrop-blur-md flex items-center justify-between w-full max-w-full mx-auto px-64 bg-background-color text-base h-14 box-border fixed top-0 left-0 z-50">
@@ -33,6 +34,7 @@ import { Icon } from 'astro-icon/components'
         <Icon name="mdi:github" size={32} aria-label="Github" />
       </button>
     </a>
+    <ThemeToggle client:load />
     <!-- <a target="" href="#theme">
       <button
         aria-label="Toggle Dark mode"
