--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,4 +32,7 @@ const { title } = Astro.props;
 		box-sizing: border-box;
 		cursor: none !important;
 	}
+	html, body, nav {
+  transition: all 250ms
+}
 </style>
