--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,10 +19,12 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class="pt-14">
+	<body class="transition-all">
 		<Cursor />
 		<NavBar />
-		<slot />
+		<div class="mt-14">
+			<slot />
+		</div>
 	</body>
 </html>
 <style is:global>
@@ -32,7 +34,4 @@ const { title } = Astro.props;
 		box-sizing: border-box;
 		cursor: none !important;
 	}
-	html, body, nav {
-  transition: all 250ms
-}
 </style>
