--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import '@/styles/globals.css'
+import '@/styles/globals.css';
 
 import Layout from '../layouts/Layout.astro';
 ---
@@ -23,9 +23,12 @@ import Layout from '../layouts/Layout.astro';
 </script>
 
 <Layout title="Tomás Hurrell Portfolio">
-	<section>
-		<h1>Welcome to My Portfolio</h1>
-		<p>This is a collection of my work and projects. Feel free to browse around and learn more about what I do.</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<section class="p-64">
+		<article class="prose lg:prose-xl dark:prose-invert">
+			<h1>Hi! I'm Tomás Hurrell</h1>
+			<p>I’m a passionate Team Lead and Front-End Lead Developer who loves expressing myself through the art of building beautiful and maintainable software, always keeping product, design and user experience in mind.</p>
+			<p>Musician and photography aficionado.</p>
+			<p>Constantly seeking improvement.</p>
+		</article>
 	</section>
 </Layout>
