--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,9 @@
 ---
 import '@/styles/globals.css';
 
+// import { ClientRouter } from 'astro:transitions';
+
+import Footer from '@/components/Footer.astro';
 import Cursor from '../components/Cursor.astro';
 import NavBar from '../components/NavBar.astro';
 
@@ -38,6 +41,7 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<!-- <ClientRouter /> -->
 	</head>
 	<body class="transition-all">
 		<Cursor />
@@ -46,6 +50,7 @@ const { title } = Astro.props;
 			<slot />
 		</div>
 	</body>
+	<Footer />
 </html>
 <style is:global>
 	* {
@@ -53,5 +58,6 @@ const { title } = Astro.props;
 		padding: 0;
 		box-sizing: border-box;
 		cursor: none !important;
+		scrollbar-width: none;
 	}
 </style>
