--- a/src/components/Cursor.astro
+++ b/src/components/Cursor.astro
@@ -74,7 +74,7 @@
       cursor.style.display = "none";
     };
     
-    function onMouseMove(e) {
+    function onMouseMove(e: { clientX: number; clientY: number; }) {
       let x = e.clientX;
       let y = e.clientY;
       
