chore: cambio theme default + dir de imagenes

--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -10,7 +10,7 @@ const { title, img, description } = data;
 <Card className='flex flex-col'>
   <div class="flex">
     <img 
-      src={`/src/assets/${img}`} 
+      src={`/images/${img}`} 
       alt={title} 
       class="w-full h-64 object-cover rounded-t-lg"
       transition:name={`${slug}-image`}
