--- a/src/pages/project/[id].astro
+++ b/src/pages/project/[id].astro
@@ -24,7 +24,7 @@ const { Content } = await render(project);
   <div class="my-32 px-4 md:px-16 lg:px-32 xl:px-64">
     <aside>
       <img 
-        src={`/src/assets/${img}`} 
+        src={`/images/${img}`} 
         alt={title} 
         class="h-auto object-cover rounded-lg"
         transition:name={`${slug}-image`}
