--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,25 +14,40 @@ interface Props {
 
 const { title } = Astro.props;
 ---
-<script>
-	document.addEventListener('astro:page-load', () => {
-		const getThemePreference = () => {
-			if (typeof localStorage !== 'undefined' && localStorage.getItem('theme')) {
-				return localStorage.getItem('theme');
-			}
-			return window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
-		};
-		const isDark = getThemePreference() === 'dark';
-		document.documentElement.classList[isDark ? 'add' : 'remove']('dark');
-	
-		if (typeof localStorage !== 'undefined') {
-			const observer = new MutationObserver(() => {
-				const isDark = document.documentElement.classList.contains('dark');
-				localStorage.setItem('theme', isDark ? 'dark' : 'light');
-			});
-			observer.observe(document.documentElement, { attributes: true, attributeFilter: ['class'] });
-		}
-	});
+<script is:inline>
+  function setDarkMode(document) {
+    const getThemePreference = () => {
+      if (
+        typeof localStorage !== 'undefined' &&
+        localStorage.getItem('theme')
+      ) {
+        return localStorage.getItem('theme');
+      }
+      return window.matchMedia('(prefers-color-scheme: dark)').matches
+        ? 'dark'
+        : 'theme-light';
+    };
+    const isDark = getThemePreference() === 'dark';
+    document.documentElement.classList[isDark ? 'add' : 'remove']('dark');
+
+    if (typeof localStorage !== 'undefined') {
+      const observer = new MutationObserver(() => {
+        const isDark = document.documentElement.classList.contains('dark');
+        localStorage.setItem('theme', isDark ? 'dark' : 'theme-light');
+      });
+      observer.observe(document.documentElement, {
+        attributes: true,
+        attributeFilter: ['class'],
+      });
+    }
+  }
+
+  setDarkMode(document);
+
+  document.addEventListener('astro:before-swap', (ev) => {
+    // Pass the incoming document to set the theme on it
+    setDarkMode(ev.newDocument);
+  });
 </script>
 
 <!doctype html>
