--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,28 +1,29 @@
 ---
+import ExperienceCard from '@/components/ExperienceCard.astro';
 import Footer from '@/components/Footer.astro';
 import ProjectCard from '@/components/ProjectCard.astro';
-import { Button } from '@/components/ui/button';
 import Layout from '@/layouts/Layout.astro';
 import { getCollection } from 'astro:content';
-import { Github } from 'lucide-react';
 
 const projects = await getCollection('projects');
+const jobs = await getCollection('jobs');
 ---
 <Layout title="Tomás Hurrell Portfolio">
 	<section class="my-64 px-4 md:px-16 lg:px-32 xl:px-64">
 		<article class="prose lg:prose-xl dark:prose-invert">
 			<h1>Hi! I'm Tomás Hurrell</h1>
 			<p>I’m a passionate Team Lead and Front-End Lead Developer who loves expressing myself through the art of building beautiful and maintainable software, always keeping product, design and user experience in mind.</p>
+			<p>With over 7 years of experience in academic education (since 2018), I have been involved in teaching and mentoring students in various subjects related to software development, front-end technologies, and best practices in programming. I have designed curricula, led workshops, and provided personalized guidance to foster both technical skills and critical thinking in aspiring developers.</p>
 			<p>Musician and photography aficionado.</p>
 			<p>Constantly seeking improvement.</p>
 		</article>
 	</section>
 	<section class="mt-64 mb-6 px-4 md:px-16 lg:px-32 xl:px-64">
 		<article class="prose lg:prose-xl dark:prose-invert py-4">
-			<h3>Featured work</h3>
+			<h3 class="mb-8">Featured work</h3>
 		</article>
 		<div class="grid gap-4">
-			<ProjectCard project={projects.at(0)} />
+			<ProjectCard project={projects.at(0)} imageClassName="h-96" />
 			<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-4">
 				{projects.slice(1).map((project) => {
 					return (
@@ -31,5 +32,17 @@ const projects = await getCollection('projects');
 				})}
 			</div>
 		</div>
+	</section>
+	<section class="mt-32 mb-6 px-4 md:px-16 lg:px-32 xl:px-64">
+		<article class="prose lg:prose-md dark:prose-invert">
+			<h3 class="mb-8">Experience</h3>
+			<div class="gap-4">
+				{jobs.map((experience) => {
+					return (
+						<ExperienceCard experience={experience} />
+					);
+				})}
+			</div>
+		</article>
 	</section>
 </Layout>
