--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ import { Button } from "./ui/button";
 ---
 
 <footer class="px-4 md:px-16 lg:px-32 xl:px-64 py-4 flex place-content-between place-items-center">
-  <p class="text-center md:text-left">Designed and built by me ©</p>
+  <p class="text-center md:text-left">Designed and built by me © - 2024</p>
   <a 
     href="https://github.com/HurrellT/hurrellt-portfolio-next" 
     target="_blank"
