--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -5,7 +5,7 @@ import { Button } from './ui/button'
 ---
 
 <nav class="backdrop-saturate-100 backdrop-blur-md flex items-center justify-between w-full max-w-full mx-auto px-4 md:px-16 lg:px-32 xl:px-64 bg-background-color text-base h-14 box-border fixed top-0 left-0 z-50">
-  <h1 class="text-base font-medium m-0 tracking-normal">Tomás Hurrell</h1>
+  <a href="/"><Button variant="outline">Tomás Hurrell</Button></a>
   <div class="flex items-center">
     <a
       target="_blank"
