chore: mejoro introduccion

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ const jobs = await getCollection('jobs');
 		<article class="prose lg:prose-xl dark:prose-invert">
 			<h1>Hi! I'm Tomás Hurrell</h1>
 			<p>I’m a passionate Team Lead and Front-End Lead Developer who loves expressing myself through the art of building beautiful and maintainable software, always keeping product, design and user experience in mind.</p>
-			<p>With over 7 years of experience in academic education (since 2018), I have been involved in teaching and mentoring students in various subjects related to software development, front-end technologies, and best practices in programming. I have designed curricula, led workshops, and provided personalized guidance to foster both technical skills and critical thinking in aspiring developers.</p>
+			<p>I have also been involved in teaching and mentoring students in various subjects related to software development, front-end technologies, and best practices in programming. I have provided personalized guidance to foster both technical skills and critical thinking in aspiring developers.</p>
 			<p>Musician and photography aficionado.</p>
 			<p>Constantly seeking improvement.</p>
 		</article>
