--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,10 +12,10 @@ const jobs = await getCollection('jobs');
 	<section class="my-64 px-4 md:px-16 lg:px-32 xl:px-64">
 		<article class="prose lg:prose-xl dark:prose-invert">
 			<h1>Hi! I'm Tomás Hurrell</h1>
-			<p>I’m a passionate Team Lead and Front-End Lead Developer who loves expressing myself through the art of building beautiful and maintainable software, always keeping product, design and user experience in mind.</p>
+			<p>I’m a passionate Development Team Lead and Front-End Technical Lead, specializing in crafting beautiful, maintainable, and high-quality software with a strong focus on product, design, and user experience. While I specialize in front-end development, I am a T-shaped professional with comprehensive full-stack experience, enabling me to lead cross-functional teams effectively and contribute to diverse technical challenges. I thrive on fostering collaboration, driving team growth, and delivering impactful solutions aligned with business and user needs.</p>
 			<p>I have also been involved in teaching and mentoring students in various subjects related to software development, front-end technologies, and best practices in programming. I have provided personalized guidance to foster both technical skills and critical thinking in aspiring developers.</p>
 			<p>Musician and photography aficionado.</p>
-			<p>Constantly seeking improvement.</p>
+			<p>Seeking constant improvement.</p>
 		</article>
 	</section>
 	<section class="mt-64 mb-6 px-4 md:px-16 lg:px-32 xl:px-64">
