--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
 import ExperienceCard from '@/components/ExperienceCard.astro';
-import Footer from '@/components/Footer.astro';
 import ProjectCard from '@/components/ProjectCard.astro';
 import Layout from '@/layouts/Layout.astro';
 import { getCollection } from 'astro:content';
 
 const projects = await getCollection('projects');
+const personalProjects = await getCollection('personalProjects');
 const jobs = await getCollection('jobs');
 ---
 <Layout title="Tomás Hurrell Portfolio">
@@ -25,6 +25,21 @@ const jobs = await getCollection('jobs');
 			<ProjectCard project={projects.at(0)} imageClassName="h-96" />
 			<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-4">
 				{projects.slice(1).map((project) => {
+					return (
+						<ProjectCard project={project} />
+					);
+				})}
+			</div>
+		</div>
+	</section>
+	<section class="mt-64 mb-6 px-4 md:px-16 lg:px-32 xl:px-64">
+		<article class="prose lg:prose-xl dark:prose-invert py-4">
+			<h3 class="mb-8">Personal projects</h3>
+		</article>
+		<div class="grid gap-4">
+			<ProjectCard project={personalProjects.at(0)} imageClassName="h-96" />
+			<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-4">
+				{personalProjects.slice(1).map((project) => {
 					return (
 						<ProjectCard project={project} />
 					);
